# forge

./: index.html
forge/: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  trapping_rain_water.py
forge/bench/: bigcodebench_gen.py  compare.py  dashboard.py  evalplus_gen.py  experiment.py  harness.py  humaneval.py  judge.py  judge_llm.py  livecodebench.py  mbpp.py  repobench.py  report.py  swebench.py
forge/bench/results/: dashboard.html  history.jsonl  humaneval_history.jsonl  mbpp_history.jsonl  repobench_history.jsonl
forge/bench/tasks/: agent.jsonl  coding.jsonl  coding_hard.jsonl  reasoning.jsonl  writing.jsonl
forge/config/: forge.yaml
forge/data/gold/: examples.jsonl
forge/docs/: CAN_WE_GET_500B.md  CAN_WE_MAKE_IT_BIGGER.md  CHECKLIST.md  FORGE_VS_CLAUDE.md  GPU_RENTAL.md  HARDER_BENCHMARKS.md  MASTERPLAN.md  MASTER_CHECKLIST.md  PHASE1_CURRENT_SYSTEM_REPORT.md  PHASE2_TARGET_ANALYSIS.md  PHASE3_GAP_REPORT.md  PHASE5_ROADMAP.md  PHASE9_IMPROVEMENT_QUEUE.md  REMOTE_SETUP.md  RUN_A_500B_STEP_BY_STEP.md  SCALING_SMARTER.md  THE_BIG_MODEL_LADDER.md  WHY_NOT_JUST_TRAIN.md
forge/forge/: __init__.py  agent.py  assets.py  backend.py  builder.py  chat.py  clarify.py  config.py  hf_backend.py  improve.py  memory.py  mine.py  orchestrator.py  semantic_memory.py  skills.py  suggest.py  trace.py
forge/forge/factory/: __init__.py  filter.py  generate.py  store.py
forge/forge/tools/: __init__.py  assets_tool.py  code.py  (+6 more)
forge/scripts/: bigrun.sh  provision_remote.sh  provision_train.sh  provision_vllm.sh  rented_run_72b.sh  serve72b_ollama.sh
(+6 files in other folders)
